--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         word-wrap: break-word;
       }
     </style>
-    <script src="bundle.js"></script>
   </head>
   <body>
     <button id="activate">Start</button>
-    
+    <div id="content"></div>
+    <script src="bundle.js"></script>
   </body>
 </html>
