--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </style>
   </head>
   <body>
-    <button id="activate">Start</button>
+    <button id="activate-btn">Start</button>
+    <button id="show-commands-btn">show commands</button>
+    <div id="err"></div>
     <div id="content"></div>
     <script src="bundle.js"></script>
   </body>
